--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.0.2"
 
     }
     buildTypes {
@@ -28,4 +28,5 @@ dependencies {
     //ButterKnife
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'com.ajts.androidmads.SQLite2Excel:library:1.0.2'//源码：https://github.com/androidmads/SQLite2XL
 }
